--- a/styles/app.css
+++ b/styles/app.css
@@ -96,25 +96,48 @@ button {
 
 
 /* Shared */
-.header-container, .trendingPreview-header, .categoriesPreview-container {
+
+.header-container, .trendingPreview-header, .categoriesPreview-container, .liked-header {
   padding: 0 24px;
 }
 
-.trendingPreview-container, .categoriesPreview-container, footer {
+.trendingPreview-container, .categoriesPreview-container, .liked-container ,footer {
   margin-top: 48px;
 }
 
-.trendingPreview-header, .categoriesPreview-title {
+.trendingPreview-header, .categoriesPreview-title , .liked-header{
   margin-bottom: 24px;
 }
 
 .movie-container {
   cursor: pointer;
+  position: relative;
 }
 
 .movie-img {
   border-radius: 8px;
   min-height: 175px;
+}
+
+.movie-btn{
+  position: absolute;
+  top: 5px;
+  right: 10px;
+  height: 30px;
+  width: 30px;
+  border-radius: 30px;
+  padding: 0;
+  margin: 0;
+}
+.movie-btn::before {
+  content: "🤍";
+}
+.movie-btn--liked {
+  background: var(--purple-light-2);
+  box-shadow: 2px 4px 10px -4px rgb(0, 0, 0); 
+}
+.movie-btn--liked::before {
+  content: '💜';
 }
 
 .categoriesPreview-list, .categories-list {
@@ -127,10 +150,24 @@ button {
 
 
 /* Header */
+
 .header-container {
   padding-top: 40px;
+  position: relative;
 }
-
+.selectoreLang{
+  position: absolute;
+  right:10px;
+  top: 20px;
+  background: var(--purple-dark-1);
+  width: 150px;
+  height: 30px;
+  border: none;
+  border-radius: 10px;
+}
+.selectoreLang option{
+  margin: 10px;
+}
 .header-container--long {
   /* background-image: url('https://pics.filmaffinity.com/Deadpool-777527803-large.jpg'); */
   /* background: linear-gradient(180deg, rgba(0, 0, 0, 0.35) 19.27%, rgba(0, 0, 0, 0) 29.17%), url(https://pics.filmaffinity.com/Deadpool-777527803-large.jpg); */
@@ -191,7 +228,8 @@ button {
 
 
 /* Trending */
-.trendingPreview-header {
+.trendingPreview-header ,
+  .liked-header  {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -203,7 +241,8 @@ button {
   width: 72px;
 }
 
-.trendingPreview-movieList {
+.trendingPreview-movieList, 
+  .liked-movieList {
   filter: drop-shadow(2px 4px 6px rgb(0, 0, 0));
   overflow-x: scroll;
   overflow-y: hidden;
@@ -213,12 +252,14 @@ button {
   padding-bottom: 16px;
 }
 
-.trendingPreview-movieList .movie-container {
+.trendingPreview-movieList .movie-container ,
+  .liked-movieList .movie-container {
   display: inline-block;
   margin-right: 8px;
 }
 
-.trendingPreview-movieList .movie-container .movie-img {
+.trendingPreview-movieList .movie-container .movie-img ,
+  .liked-movieList .movie-container .movie-img {
   height: 225px;
   min-height: 225px;
   max-height: 225px;
@@ -382,7 +423,7 @@ footer {
 
 /* cargando....... */
 
-.header-container, .trendingPreview-header, .categoriesPreview-container{
+.trendingPreview-header, .categoriesPreview-container{
   padding: 0 24px;
 }
 .trendingPreview-container, .categoriesPreview-container, footer{
@@ -418,13 +459,13 @@ footer {
   border-radius: 8px;
 }
 
-/* .categoriesPreview-list, .categories-list {
+.categoriesPreview-list, .categories-list {
 /*   display: flex;
   align-items: center;
   justify-content: space-between;
   position: relative;
   flex-wrap: wrap; */
-} */
+} 
 
 .load2 {
   background: var(--purple-light-2);
